Add Camp Imagine text overlay and video background to Falls on Fire scene
- Modified FallsOnFire.ts to include video background with center-crop
- Added alternating text overlays: 'FALLS ON FIRE' and 'Camp Imagine'
- Created video generation script for OpenAI Sora API
- Added openai dependency to package.json
- Added documentation for video generation and alternatives

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-video": "node generate-video.js"
   },
   "dependencies": {
     "pixi.js": "^7.3.2",
@@ -13,7 +14,8 @@
     "gl-matrix": "^3.4.3",
     "simplex-noise": "^4.0.1",
     "bezier-easing": "^2.1.0",
-    "alea": "^0.0.9"
+    "alea": "^0.0.9",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
